Edited hover effect colors to tonal instead of high contrast; corrected home link in headers

--- a/queries.css
+++ b/queries.css
@@ -166,6 +166,10 @@
     margin-top: 0;
   }
 
+  .contact-form {
+    /* width: 100%; */
+  }
+
   .footer {
     background-image: none;
     flex-direction: column;
